2010-06-10  Mahesh Kulkarni  <mahesh.kulkarni@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Memory leak in qwebpage unit test cases
        https://bugs.webkit.org/show_bug.cgi?id=40405

        * tests/qwebpage/tst_qwebpage.cpp:
        (tst_QWebPage::infiniteLoopJS):

2010-06-10  Raine Makelainen  <raine.makelainen@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        Impossible to set input method hints based HTML5 input types
        https://bugs.webkit.org/show_bug.cgi?id=40107

        EditorClientQt to set input method hints for "number", "tel",
        "email", and "url" HTML input elements.

        Tests for HTML input elements and input method hints added for
        QGraphicsWebView and QWebView.

        * WebCoreSupport/EditorClientQt.cpp:
        (WebCore::EditorClientQt::setInputMethodState):
        * tests/qgraphicswebview/resources/input_types.html: Added.
        * tests/qgraphicswebview/tst_qgraphicswebview.cpp:
        (GraphicsWebView::GraphicsWebView):
        (GraphicsWebView::fireMouseClick):
        (tst_QGraphicsWebView::focusInputTypes):
        * tests/qgraphicswebview/tst_qgraphicswebview.qrc: Added.
        * tests/qwebview/resources/input_types.html: Added.
        * tests/qwebview/tst_qwebview.cpp:
        (WebView::fireMouseClick):
        (tst_QWebView::focusInputTypes):
        * tests/qwebview/tst_qwebview.qrc:

2010-06-10  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Reduce FrameView.h includes to speed up build times
        https://bugs.webkit.org/show_bug.cgi?id=40408

        * Api/qwebframe.cpp:
         - Include RenderLayer.h since it's used in this file.

2010-06-10  Andy Shaw  <andy.shaw@nokia.com>

        Reviewed by Simon Hausmann.

        REGRESSION: [Qt] When dragging onto a page that handles the drag in Javascript it will be a move and not a copy by default
        https://bugs.webkit.org/show_bug.cgi?id=40401
