@@ -1,3 +1,15 @@
+2010-06-10  Yael Aharon  <yael.aharon@nokia.com>
+
+        Reviewed by Kenneth Rohde Christiansen.
+
+        [Qt] Support for loading notification icons
+        https://bugs.webkit.org/show_bug.cgi?id=40004
+
+        Take into use the icon that was loaded for the notification.
+
+        * WebCoreSupport/NotificationPresenterClientQt.cpp:
+        (WebCore::NotificationPresenterClientQt::show):
+
 2010-06-10  Mahesh Kulkarni  <mahesh.kulkarni@nokia.com>
 
         Reviewed by Simon Hausmann.
